--- a/src/View/pages/patientLogin/plogin.scss
+++ b/src/View/pages/patientLogin/plogin.scss
@@ -16,6 +16,23 @@
             align-items: center;
             justify-content: center;
         }
+
+        .plogin-wrapper-left.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+            transition: 0.5s ease;
+        }
+
+        .plogin-wrapper-left.inactive {
+            opacity: 0;
+            // visibility: hidden;
+            display: none;
+            transform: translateY(-20px);
+            transition: 0.5s ease;
+            position: absolute;
+        }
+
         .plogin-wrapper-right {
             display: flex;
             flex-direction: column;
@@ -168,6 +185,18 @@
                             font-size: 15px;
                         }
 
+                        .submit {
+                            margin: 0px auto ;
+                            padding: 15px 0px 15px 15px;
+                            border-radius: 2em;
+                            border: none;
+                            width: 100%;
+                            background-color: #0C4CAC;
+                            color: white;
+                            font-size: 15px;
+                            text-align: center;
+                        }
+
                         .sub-info {
                             // border: 1px solid red;
                             margin: -11px auto 0px auto;
@@ -213,6 +242,87 @@
 
             }
             
+        }
+        .plogin-wrapper-right.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+            transition: 0.5s ease;
+        }
+
+        .plogin-wrapper-right.inactive {
+            opacity: 0;
+            // visibility: hidden;
+            display: none;
+            transform: translateY(-20px);
+            transition: 0.5s ease;
+            position: absolute;
+        }
+
+        .phase3 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            // border: 1px solid red;
+            width: 100%;
+            height: 100vh;
+            margin: 0px 0px 0px 0px;
+
+            .phase3-wrapper {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                // border: 1px solid red;
+
+                .img-holder {
+                    img {
+                        width: 270px;
+                    }
+                }
+    
+                .text-description {
+                    width: 300px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+    
+                    p{
+                        text-align: center;
+                    }
+                }
+    
+                .sub-info {
+                    span {
+                        padding: 5px 15px;
+                        background-color: #0C4CAC;
+                        color: #fff;
+                        cursor: pointer;
+                        font-size: 12px;
+                        border-radius: 20px;
+
+                    }
+                }
+            }
+
+        }
+
+        .phase3.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+            transition: 0.5s ease;
+        }
+
+        .phase3.inactive {
+            opacity: 0;
+            // visibility: hidden;
+            display: none;
+            transform: translateY(-20px);
+            transition: 0.5s ease;
+            position: absolute;
         }
 
     }
