Book Now Pay Later started 20%

--- a/src/View/pages/booking/booking.scss
+++ b/src/View/pages/booking/booking.scss
@@ -213,7 +213,8 @@
                 color: #c5c5c5;
                 display: flex;
                 z-index: 5;
-                margin-top: 130px;
+                margin-top: 140px;
+                font-size: 13px;
             }
         }
     }
