--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -72,7 +72,7 @@
                         display: flex;
                         flex-direction: column;
                         gap: 30px;
-                        border: 1px solid blue;
+                        // border: 1px solid blue;
 
                         section {
                             display: flex;
@@ -128,19 +128,39 @@
                             .calendar {
                                 width: 350px;
                                 margin: 0px auto;
+                                border: 1px solid #f5f5f5;
+                                // background-color: #f2f6fd;
+                                background-color: #fafafa;
+                                border-radius: 2em;
+                                position: absolute;
                             }
 
-                            .calendar.active {
+                            .calendar-backdrop {
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                width: 350px;
+                                height: 300px;
+                                margin: 0px auto;
+                                // padding: 20px;
+                                // border: 1px solid #f5f5f5;
+                                border-radius: 2em;
+                                // position: relative;
+                                position: absolute;
+                            }
+
+                            .calendar-backdrop.active {
                                 opacity: 1;
                                 visibility: visible;
-                                transform: translateY(0);
+                                transform: translateY(200px);
                                 transition: 0.5s ease;
                             }
     
-                            .calendar.inactive {
+                            .calendar-backdrop.inactive {
                                 opacity: 0;
-                                // visibility: hidden;
-                                display: none;
+                                visibility: hidden;
+                                // display: none;
+                                // transform: translateY(-20px);
                                 transform: translateY(-20px);
                                 transition: 0.5s ease;
                                 position: absolute;
@@ -148,12 +168,12 @@
 
                         }
 
-                        button {
+                        .button {
                             margin: 0px auto ;
                             padding: 15px 0px 15px 15px;
                             border-radius: 2em;
                             border: none;
-                            width: 100%;
+                            width: 80%;
                             background-color: #0C4CAC;
                             color: white;
                             font-size: 15px;
