--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -49,22 +49,241 @@
             // border: 1px solid red;
 
             .form-holder {
+                display: flex;
+                flex-direction: column;
+                background-color: #fafafa;
+                border-radius: 10px;
+
+                .headerText {
+                    margin: 70px auto 20px auto;
+                    padding: 0px 0px 0px 15px;
+                    color: #5e5e5e;
+                    background-color: #0C4CAC;
+                    width: 97%;
+                    span {
+                        color: #fff;
+                        font-size: 15px;
+                        font-weight: 500;
+                    }
+                }
+                
+                .progress-status {
+                    display: flex;
+                    flex-direction: row;
+                    // height: 60px;
+                    height: max-content;
+                    // border: 1px solid red;
+                    margin: 0px 0px 0px 0px;
+
+                    .stage {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        gap: 5px;
+                        // width: 80px;
+                        // border: 1px solid red;
+                        width: 33.3%;
+
+                        .stage-icon {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            // border: 1px solid black;
+                            background-color: #0C4CAC;
+                            width: 21px;
+                            height: 21px;
+                            padding: 9px;
+                            border-radius: 50%;
+
+                            img{
+                                width: 20px;
+                            }
+                        }
+
+                        .stage-text {
+                            font-size: 12px;
+                        }
+
+                        // .stage-bar {
+                        //     height: 7px;
+                        //     border-radius: 5px 0px 0px 5px;
+                        //     width: 100%;
+                        //     background-color: #0C4CAC;
+                        // }
+                    }
+                    .stage.one {
+
+                        .stage-icon {
+                            background-color: #e0e0e0;
+                        }
+
+                        .stage-bar {
+                            height: 7px;
+                            border-radius: 5px 0px 0px 5px;
+                            width: 100%;
+                            background-color: #e0e0e0;
+                        }
+
+                    }
+                    .stage.two {
+
+                        .stage-icon {
+                            background-color: #e0e0e0;
+                        }
+
+                        .stage-bar {
+                            height: 7px;
+                            border-radius: 0px 0px 0px 0px;
+                            width: 100%;
+                            // background-color: #0C4CAC;
+                            background-color: #e0e0e0;
+                        }
+
+                    }
+                    .stage.three {
+
+                        .stage-icon {
+                            background-color: #e0e0e0;
+                        }
+
+                        .stage-bar {
+                            height: 7px;
+                            border-radius: 0px 5px 5px 0px;
+                            width: 100%;
+                            // background-color: #0C4CAC;
+                            background-color: #e0e0e0;
+                        }
+
+                    }
+                    .stage.active {
+
+                        .stage-icon {
+                            background-color: #0C4CAC;
+                        }
+
+                        .stage-bar {
+                            background-color: #0C4CAC;
+                        }
+
+                    }
+                }
 
                 .phase1 {
                     display: flex;
                     flex-direction: column;
                     width: 450px;
                     // border: 1px solid red;
-                    padding: 50px 30px;
+                    padding: 20px 30px;
+                    margin: 0px 0px 0px 0px;
+                    // border: 1px solid blue;
+                    border-radius: 10px;
+                    background-color: #fafafa;
+                    // padding: 20px 10px;
                     animation-name: slideUppaylaterForm;
                     animation-duration: 1s;
                     animation-timing-function: ease-out;
 
-                    .headerText {
-                        margin: 20px auto ;
-                        color: #5e5e5e;
-                        span {
-                            color: #0C4CAC;
+                    // .headerText {
+                    //     margin: 20px auto ;
+                    //     padding: 0px 0px 0px 15px;
+                    //     color: #5e5e5e;
+                    //     background-color: #0C4CAC;
+                    //     width: 98%;
+                    //     span {
+                    //         color: #fff;
+                    //         font-size: 15px;
+                    //         font-weight: 500;
+                    //     }
+                    // }
+
+                    .progress-status {
+                        display: flex;
+                        flex-direction: row;
+                        // height: 60px;
+                        height: max-content;
+                        // border: 1px solid red;
+                        margin: 0px 0px 20px 0px;
+
+                        .stage {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            gap: 5px;
+                            // width: 80px;
+                            // border: 1px solid red;
+                            width: 33%;
+
+                            .stage-icon {
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                // border: 1px solid black;
+                                background-color: #0C4CAC;
+                                width: 21px;
+                                height: 21px;
+                                padding: 9px;
+                                border-radius: 50%;
+
+                                img{
+                                    width: 20px;
+                                }
+                            }
+
+                            .stage-text {
+                                font-size: 12px;
+                            }
+
+                            // .stage-bar {
+                            //     height: 7px;
+                            //     border-radius: 5px 0px 0px 5px;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            // }
+                        }
+
+                        .stage.one {
+
+                            .stage-icon {
+                                background-color: #e0e0e0;
+                            }
+
+                            .stage-bar {
+                                height: 7px;
+                                border-radius: 5px 0px 0px 5px;
+                                width: 100%;
+                                background-color: #e0e0e0;
+                            }
+
+                        }
+                        .stage.two {
+
+                            .stage-icon {
+                                background-color: #e0e0e0;
+                            }
+
+                            .stage-bar {
+                                height: 7px;
+                                border-radius: 0px 0px 0px 0px;
+                                width: 100%;
+                                // background-color: #0C4CAC;
+                                background-color: #e0e0e0;
+                            }
+
+                        }
+                        .stage.three {
+
+                            .stage-icon {
+                                background-color: #e0e0e0;
+                            }
+
+                            .stage-bar {
+                                height: 7px;
+                                border-radius: 0px 5px 5px 0px;
+                                width: 100%;
+                                // background-color: #0C4CAC;
+                                background-color: #e0e0e0;
+                            }
+
                         }
                     }
 
@@ -72,7 +291,6 @@
                         display: flex;
                         flex-direction: column;
                         gap: 30px;
-                        // border: 1px solid blue;
 
                         section {
                             display: flex;
@@ -135,6 +353,14 @@
                                 position: absolute;
                             }
 
+                            .cancel-holder {
+                                position: absolute;
+                                margin: 0px 0px 300px 370px;
+                                img{
+                                    width: 40px;
+                                }
+                            }
+
                             .calendar-backdrop {
                                 display: flex;
                                 align-items: center;
@@ -152,7 +378,7 @@
                             .calendar-backdrop.active {
                                 opacity: 1;
                                 visibility: visible;
-                                transform: translateY(200px);
+                                transform: translateY(190px);
                                 transition: 0.5s ease;
                             }
     
@@ -161,7 +387,7 @@
                                 visibility: hidden;
                                 // display: none;
                                 // transform: translateY(-20px);
-                                transform: translateY(-20px);
+                                transform: translateY(150px);
                                 transition: 0.5s ease;
                                 position: absolute;
                             }
