--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -58,7 +58,8 @@
                     margin: 70px auto 20px auto;
                     padding: 0px 0px 0px 15px;
                     color: #5e5e5e;
-                    background-color: #0C4CAC;
+                    // background-color:#ffd600;
+                    background-color: #F6BB42;
                     width: 97%;
                     span {
                         color: #fff;
@@ -196,96 +197,96 @@
                     //     }
                     // }
 
-                    .progress-status {
-                        display: flex;
-                        flex-direction: row;
-                        // height: 60px;
-                        height: max-content;
-                        // border: 1px solid red;
-                        margin: 0px 0px 20px 0px;
+                    // .progress-status {
+                    //     display: flex;
+                    //     flex-direction: row;
+                    //     // height: 60px;
+                    //     height: max-content;
+                    //     // border: 1px solid red;
+                    //     margin: 0px 0px 20px 0px;
 
-                        .stage {
-                            display: flex;
-                            flex-direction: column;
-                            align-items: center;
-                            gap: 5px;
-                            // width: 80px;
-                            // border: 1px solid red;
-                            width: 33%;
+                    //     .stage {
+                    //         display: flex;
+                    //         flex-direction: column;
+                    //         align-items: center;
+                    //         gap: 5px;
+                    //         // width: 80px;
+                    //         // border: 1px solid red;
+                    //         width: 33%;
 
-                            .stage-icon {
-                                display: flex;
-                                align-items: center;
-                                justify-content: center;
-                                // border: 1px solid black;
-                                background-color: #0C4CAC;
-                                width: 21px;
-                                height: 21px;
-                                padding: 9px;
-                                border-radius: 50%;
+                    //         .stage-icon {
+                    //             display: flex;
+                    //             align-items: center;
+                    //             justify-content: center;
+                    //             // border: 1px solid black;
+                    //             background-color: #0C4CAC;
+                    //             width: 21px;
+                    //             height: 21px;
+                    //             padding: 9px;
+                    //             border-radius: 50%;
 
-                                img{
-                                    width: 20px;
-                                }
-                            }
+                    //             img{
+                    //                 width: 20px;
+                    //             }
+                    //         }
 
-                            .stage-text {
-                                font-size: 12px;
-                            }
+                    //         .stage-text {
+                    //             font-size: 12px;
+                    //         }
 
-                            // .stage-bar {
-                            //     height: 7px;
-                            //     border-radius: 5px 0px 0px 5px;
-                            //     width: 100%;
-                            //     background-color: #0C4CAC;
-                            // }
-                        }
+                    //         // .stage-bar {
+                    //         //     height: 7px;
+                    //         //     border-radius: 5px 0px 0px 5px;
+                    //         //     width: 100%;
+                    //         //     background-color: #0C4CAC;
+                    //         // }
+                    //     }
 
-                        .stage.one {
+                    //     .stage.one {
 
-                            .stage-icon {
-                                background-color: #e0e0e0;
-                            }
+                    //         .stage-icon {
+                    //             background-color: #e0e0e0;
+                    //         }
 
-                            .stage-bar {
-                                height: 7px;
-                                border-radius: 5px 0px 0px 5px;
-                                width: 100%;
-                                background-color: #e0e0e0;
-                            }
+                    //         .stage-bar {
+                    //             height: 7px;
+                    //             border-radius: 5px 0px 0px 5px;
+                    //             width: 100%;
+                    //             background-color: #e0e0e0;
+                    //         }
 
-                        }
-                        .stage.two {
+                    //     }
+                    //     .stage.two {
 
-                            .stage-icon {
-                                background-color: #e0e0e0;
-                            }
+                    //         .stage-icon {
+                    //             background-color: #e0e0e0;
+                    //         }
 
-                            .stage-bar {
-                                height: 7px;
-                                border-radius: 0px 0px 0px 0px;
-                                width: 100%;
-                                // background-color: #0C4CAC;
-                                background-color: #e0e0e0;
-                            }
+                    //         .stage-bar {
+                    //             height: 7px;
+                    //             border-radius: 0px 0px 0px 0px;
+                    //             width: 100%;
+                    //             // background-color: #0C4CAC;
+                    //             background-color: #e0e0e0;
+                    //         }
 
-                        }
-                        .stage.three {
+                    //     }
+                    //     .stage.three {
 
-                            .stage-icon {
-                                background-color: #e0e0e0;
-                            }
+                    //         .stage-icon {
+                    //             background-color: #e0e0e0;
+                    //         }
 
-                            .stage-bar {
-                                height: 7px;
-                                border-radius: 0px 5px 5px 0px;
-                                width: 100%;
-                                // background-color: #0C4CAC;
-                                background-color: #e0e0e0;
-                            }
+                    //         .stage-bar {
+                    //             height: 7px;
+                    //             border-radius: 0px 5px 5px 0px;
+                    //             width: 100%;
+                    //             // background-color: #0C4CAC;
+                    //             background-color: #e0e0e0;
+                    //         }
 
-                        }
-                    }
+                    //     }
+                    // }
 
                     form {
                         display: flex;
@@ -320,7 +321,8 @@
                             }
     
                             .formSelect {
-                                padding: 20px;
+                                width: 46%;
+                                padding: 15px 20px 15px 15px;
                                 border-radius: 2em;
                                 border: 1px solid #e0e0e0;
                                 // height: 100px;
@@ -396,22 +398,23 @@
 
                         .button {
                             margin: 0px auto ;
-                            padding: 15px 0px 15px 15px;
+                            padding: 15px 0px 15px 0px;
                             border-radius: 2em;
                             border: none;
-                            width: 80%;
+                            width: 30%;
                             background-color: #0C4CAC;
                             color: white;
                             font-size: 15px;
+                            text-align: center;
                         }
 
-                        .sub-info {
-                            // border: 1px solid red;
-                            margin: -11px auto 0px auto;
-                            font-size: 13px;
-                            color: #0C4CAC;
-                            cursor: pointer;
-                        }
+                        // .sub-info {
+                        //     // border: 1px solid red;
+                        //     margin: -11px auto 0px auto;
+                        //     font-size: 13px;
+                        //     color: #0C4CAC;
+                        //     cursor: pointer;
+                        // }
                     }
 
                 }
@@ -469,18 +472,154 @@
                             flex-direction: column;
                             gap: 30px;
 
-                            input:focus, textarea:focus, select:focus {
-                                outline: #0C4CAC;
-                                border: 1px solid #0C4CAC;
+                            .patient-card {
+                                height: 110px;
+                                background-color: #e1f5fe;
+                                width: 90%;
+                                margin: -30px auto 0px auto;
+                                border-radius: 15px 15px 15px 0px;
+                                display: flex;
+                                flex-direction: column;
+                                gap: 5px;
+
+                                .photo-card {
+                                    display: flex;
+                                    flex-direction: column;
+                                    align-items: center;
+                                    justify-content: center;
+                                    height: 70px;
+                                    width: 70px;
+                                    border: 1px solid #f5f5f5;
+                                    border-radius: 50%;
+                                    position: absolute;
+                                    margin: 19px 0px 0px -30px;
+                                    overflow: hidden;
+                                    background-color: #fff;
+
+                                    img {
+                                        width: 60px;
+                                    }
+                                }
+
+                                .name {
+                                    color: #0C4CAC;
+                                    // border: 1px solid red;
+                                    height: max-content;
+                                    width: 70%;
+                                    margin: 10px auto 0px auto;
+                                    font-weight: 500;
+                                    font-size: 16px;
+                                }
+                                .phone {
+                                    display: flex;
+                                    align-items: center;
+                                    gap: 10px;
+                                    color: #757575;
+                                    // border: 1px solid red;
+                                    height: max-content;
+                                    width: 70%;
+                                    margin: 0px auto;
+                                    // font-weight: 500;
+                                    font-size: 12px;
+                                }
+                                .email {
+                                    display: flex;
+                                    align-items: center;
+                                    gap: 10px;
+                                    color: #757575;
+                                    // border: 1px solid red;
+                                    height: max-content;
+                                    width: 70%;
+                                    margin: 0px auto;
+                                    // font-weight: 500;
+                                    font-size: 12px;
+                                }
+                                .sex {
+                                    display: flex;
+                                    align-items: center;
+                                    gap: 10px;
+                                    color: #757575;
+                                    // border: 1px solid red;
+                                    height: max-content;
+                                    width: 70%;
+                                    margin: 0px auto;
+                                    // font-weight: 500;
+                                    font-size: 12px;
+                                }
                             }
 
-                            .formInput {
-                                width: 97%;
-                                padding: 15px 0px 15px 15px;
+                            .clinic {
+                                display: flex;
+                                flex-direction: row;
+                                align-items: center;
+                                gap: 5px;
+                                background-color: #e1f5fe;
+                                width: 80%;
+                                margin: 0px auto 0px auto;
+                                padding: 15px ;
+                                border-radius: 15px 15px 15px 0px;
+                                color: #757575;
+                                font-size: 14px;
+
+                            }
+
+                            .date {
+                                display: flex;
+                                flex-direction: row;
+                                align-items: center;
+                                gap: 5px;
+                                background-color: #e1f5fe;
+                                width: 80%;
+                                margin: 0px auto 0px auto;
+                                padding: 15px ;
+                                border-radius: 15px 15px 15px 0px;
+                                color: #757575;
+                                font-size: 14px;
+
+                            }
+
+                            .note {
+                                display: flex;
+                                flex-direction: row;
+                                align-items: center;
+                                gap: 5px;
+                                background-color: #e1f5fe;
+                                width: 80%;
+                                height: max-content;
+                                margin: 0px auto 0px auto;
+                                padding: 15px ;
+                                border-radius: 15px 15px 15px 0px;
+                                color: #757575;
+                                font-size: 14px;
+                                font-style: italic;
+
+                            }
+
+                        }
+
+                        .button-holder {
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: space-between;
+
+                            .previous {
+                                padding: 15px 15px 15px 15px;
+                                background-color: #0C4CAC;
+                                color: white;
                                 border-radius: 2em;
-                                border: 1px solid #e0e0e0;
+                                width: 60px;
+                                text-align: center;
+
                             }
 
+                            .finish {
+                                padding: 15px 15px 15px 15px;
+                                background-color: #0C4CAC;
+                                color: white;
+                                border-radius: 2em;
+                                width: 60px;
+                                text-align: center;
+                            }
                         }
 
                         button {
@@ -504,18 +643,6 @@
                             color: white;
                             font-size: 15px;
                             text-align: center;
-                        }
-
-                        .sub-info {
-                            // border: 1px solid red;
-                            margin: -11px auto 0px auto;
-                            font-size: 13px;
-                            color: #999999;
-                            cursor: pointer;
-
-                            span {
-                                color: #0C4CAC;
-                            }
                         }
                     }
 
