--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -843,6 +843,7 @@
                 .form-holder {
                     display: flex;
                     flex-direction: column;
+                    align-items: center;
                     background-color: #fafafa;
                     border-radius: 10px;
                     border: 1px solid red;
@@ -864,6 +865,7 @@
                     .progress-status {
                         display: flex;
                         flex-direction: row;
+                        width: 100%;
                         // height: 60px;
                         height: max-content;
                         border: 1px solid red;
