--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -837,8 +837,10 @@
                 flex-direction: column;
                 align-items: center;
                 // justify-content: center;
-                width: 350px;
-                border: 1px solid red;
+                // width: 350px;
+                width: 100%;
+                // border: 1px solid red;
+                padding: 0px;
     
                 .form-holder {
                     display: flex;
@@ -846,7 +848,7 @@
                     align-items: center;
                     background-color: #fafafa;
                     border-radius: 10px;
-                    border: 1px solid red;
+                    // border: 1px solid red;
     
                     .headerText {
                         margin: 60px auto 10px auto;
@@ -868,7 +870,7 @@
                         width: 100%;
                         // height: 60px;
                         height: max-content;
-                        border: 1px solid red;
+                        // border: 1px solid red;
                         margin: 0px 0px 0px 0px;
     
                         .stage {
@@ -878,7 +880,7 @@
                             gap: 5px;
                             // width: 80px;
                             // border: 1px solid red;
-                            width: 30%;
+                            width: 33%;
     
                             .stage-icon {
                                 display: flex;
@@ -1008,7 +1010,7 @@
                                     padding: 15px 0px 15px 15px;
                                     border-radius: 2em;
                                     border: 1px solid #e0e0e0;
-                                    margin: 0px 0px 0px 10px;
+                                    margin: 0px 0px 0px 0px;
                                 }
     
                                 .formTextArea {
