booking page created mobile 6

--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -977,7 +977,7 @@
                         flex-direction: column;
                         width: 300px;
                         // border: 1px solid red;
-                        padding: 0px 30px;
+                        padding: 0px 30px 50px 30px;
                         margin: 10px 0px 0px 0px;
                         // border: 1px solid blue;
                         border-radius: 10px;
@@ -1396,7 +1396,7 @@
                         // justify-content: center;
                         // border: 1px solid red;
                         width: 300px;
-                        padding: 0px 30px;
+                        padding: 0px 30px 50px 30px;
                         height: 70vh;
                         margin: 0px 0px 0px 0px;
     
