Patient Portal Dashboard added: search bar, filter buttons

--- a/src/View/pages/patientLogin/plogin.scss
+++ b/src/View/pages/patientLogin/plogin.scss
@@ -85,15 +85,27 @@
 
                         }
 
-                        button {
-                            margin: 0px auto ;
-                            padding: 15px 0px 15px 15px;
+                        // button {
+                        //     margin: 0px auto ;
+                        //     padding: 15px 0px 15px 15px;
+                        //     border-radius: 2em;
+                        //     border: none;
+                        //     width: 100%;
+                        //     background-color: #0C4CAC;
+                        //     color: white;
+                        //     font-size: 15px;
+                        // }
+
+                        .button {
+                            margin: 0px auto;
+                            padding: 15px 0px 15px 0px;
                             border-radius: 2em;
                             border: none;
                             width: 100%;
                             background-color: #0C4CAC;
                             color: white;
                             font-size: 15px;
+                            text-align: center;
                         }
 
                         .sub-info {
@@ -404,15 +416,27 @@
         
                             }
         
-                            button {
-                                margin: 0px auto ;
-                                padding: 15px 0px 15px 15px;
+                            // button {
+                            //     margin: 0px auto ;
+                            //     padding: 15px 0px 15px 15px;
+                            //     border-radius: 2em;
+                            //     border: none;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            //     color: white;
+                            //     font-size: 15px;
+                            // }
+
+                            .button {
+                                margin: 0px auto;
+                                padding: 15px 0px 15px 0px;
                                 border-radius: 2em;
                                 border: none;
                                 width: 100%;
                                 background-color: #0C4CAC;
                                 color: white;
                                 font-size: 15px;
+                                text-align: center;
                             }
                         }
 
@@ -456,15 +480,27 @@
         
                             }
         
-                            button {
-                                margin: 0px auto ;
-                                padding: 15px 0px 15px 15px;
+                            // button {
+                            //     margin: 0px auto ;
+                            //     padding: 15px 0px 15px 15px;
+                            //     border-radius: 2em;
+                            //     border: none;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            //     color: white;
+                            //     font-size: 15px;
+                            // }
+
+                            .button {
+                                margin: 0px auto;
+                                padding: 15px 0px 15px 0px;
                                 border-radius: 2em;
                                 border: none;
                                 width: 100%;
                                 background-color: #0C4CAC;
                                 color: white;
                                 font-size: 15px;
+                                text-align: center;
                             }
                         }
 
@@ -554,15 +590,27 @@
         
                             }
         
-                            button {
-                                margin: 0px auto ;
-                                padding: 15px 0px 15px 15px;
+                            // button {
+                            //     margin: 0px auto ;
+                            //     padding: 15px 0px 15px 15px;
+                            //     border-radius: 2em;
+                            //     border: none;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            //     color: white;
+                            //     font-size: 15px;
+                            // }
+
+                            .button {
+                                margin: 0px auto;
+                                padding: 15px 0px 15px 0px;
                                 border-radius: 2em;
                                 border: none;
                                 width: 100%;
                                 background-color: #0C4CAC;
                                 color: white;
                                 font-size: 15px;
+                                text-align: center;
                             }
                         }
 
@@ -606,15 +654,27 @@
         
                             }
         
-                            button {
-                                margin: 0px auto ;
-                                padding: 15px 0px 15px 15px;
+                            // button {
+                            //     margin: 0px auto ;
+                            //     padding: 15px 0px 15px 15px;
+                            //     border-radius: 2em;
+                            //     border: none;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            //     color: white;
+                            //     font-size: 15px;
+                            // }
+
+                            .button {
+                                margin: 0px auto;
+                                padding: 15px 0px 15px 0px;
                                 border-radius: 2em;
                                 border: none;
                                 width: 100%;
                                 background-color: #0C4CAC;
                                 color: white;
                                 font-size: 15px;
+                                text-align: center;
                             }
                         }
 
@@ -704,15 +764,27 @@
         
                             }
         
-                            button {
-                                margin: 0px auto ;
-                                padding: 15px 0px 15px 15px;
+                            // button {
+                            //     margin: 0px auto ;
+                            //     padding: 15px 0px 15px 15px;
+                            //     border-radius: 2em;
+                            //     border: none;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            //     color: white;
+                            //     font-size: 15px;
+                            // }
+
+                            .button {
+                                margin: 0px auto;
+                                padding: 15px 0px 15px 0px;
                                 border-radius: 2em;
                                 border: none;
                                 width: 100%;
                                 background-color: #0C4CAC;
                                 color: white;
                                 font-size: 15px;
+                                text-align: center;
                             }
                         }
 
@@ -756,15 +828,27 @@
         
                             }
         
-                            button {
-                                margin: 0px auto ;
-                                padding: 15px 0px 15px 15px;
+                            // button {
+                            //     margin: 0px auto ;
+                            //     padding: 15px 0px 15px 15px;
+                            //     border-radius: 2em;
+                            //     border: none;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            //     color: white;
+                            //     font-size: 15px;
+                            // }
+
+                            .button {
+                                margin: 0px auto;
+                                padding: 15px 0px 15px 0px;
                                 border-radius: 2em;
                                 border: none;
                                 width: 100%;
                                 background-color: #0C4CAC;
                                 color: white;
                                 font-size: 15px;
+                                text-align: center;
                             }
                         }
 
@@ -849,15 +933,27 @@
         
                             }
         
-                            button {
-                                margin: 0px auto ;
-                                padding: 15px 0px 15px 15px;
+                            // button {
+                            //     margin: 0px auto ;
+                            //     padding: 15px 0px 15px 15px;
+                            //     border-radius: 2em;
+                            //     border: none;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            //     color: white;
+                            //     font-size: 15px;
+                            // }
+
+                            .button {
+                                margin: 0px auto;
+                                padding: 15px 0px 15px 0px;
                                 border-radius: 2em;
                                 border: none;
                                 width: 100%;
                                 background-color: #0C4CAC;
                                 color: white;
                                 font-size: 15px;
+                                text-align: center;
                             }
                         }
 
@@ -901,15 +997,27 @@
         
                             }
         
-                            button {
-                                margin: 0px auto ;
-                                padding: 15px 0px 15px 15px;
+                            // button {
+                            //     margin: 0px auto ;
+                            //     padding: 15px 0px 15px 15px;
+                            //     border-radius: 2em;
+                            //     border: none;
+                            //     width: 100%;
+                            //     background-color: #0C4CAC;
+                            //     color: white;
+                            //     font-size: 15px;
+                            // }
+
+                            .button {
+                                margin: 0px auto;
+                                padding: 15px 0px 15px 0px;
                                 border-radius: 2em;
                                 border: none;
                                 width: 100%;
                                 background-color: #0C4CAC;
                                 color: white;
                                 font-size: 15px;
+                                text-align: center;
                             }
                         }
 
